# agentic-rules-framework

./: .gitignore  AGENTS.md  AGENT_RULES.yaml  README.md  agent-rules.yaml  agent_rules.py  batch_convert.py  check_agent_rules.py  config.yaml  conversion_utils.py  convert.py  log_additional_info.py  log_related_events.py  pyproject.toml  tool_check.py
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/hooks/: logging.json  rule-check.json  tool-check.json
docs/: dev-notes.md
src/: check_rules.py  convert.py  io_format.py  logging.py  normalization.py  normalize.py  output.py  platform_specific.py  rules.py
tests/: test_command_permissions.py  test_cwd_variable.py  test_file_permissions.py  test_global_rules.py  test_normalization.py  test_tool_check.py  test_tool_format.py
tests/protected/: test_command_permissions.py  test_normalization.py  test_platform_specific.py
tests/sample-inputs/: claude-code.jsonl  copilot-cli.jsonl  vscode-copilot.jsonl
tests/samples-normalized/: claude-code-normalized.jsonl  copilot-cli-normalized.jsonl  vscode-copilot-normalized.jsonl
tests/samples-simplified/: claude-code-simplified.jsonl  copilot-cli-simplified.jsonl  vscode-copilot-simplified.jsonl
