[project]
name = "agentic-rules-framework"
version = "0.1.0"
description = "Tool checking harness with configurable rules for agentic systems."
requires-python = ">=3.8"
dependencies = [
    "platformdirs>=3.0",
    "pyyaml>=6.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
